crates/core/tests/proc/svc/ctor_rval_bad_self.stderr
error[E0080]: evaluation of constant value failed
  --> tests/proc/svc/ctor_rval_bad_self.rs:13:12
   |
13 |     pub fn new() -> ffi::Result<u8, Error> {
   |            ^^^ evaluation panicked: This method looks like a constructor, but does not return ffi::Result<Self, _>

error[E0308]: mismatched types
  --> tests/proc/svc/ctor_rval_bad_self.rs:13:12
   |
13 |     pub fn new() -> ffi::Result<u8, Error> {
   |            ^^^
   |            |
   |            expected `*const Service`, found `*mut u8`
   |            expected due to the type of this binding
   |
   = note: expected raw pointer `*const Service`
              found raw pointer `*mut u8`
